--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js --env env=prod",
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
-    "deploy": "gh-pages -d dist"
+    "dev": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\""
   },
   "homepage": "https://apluso1.github.io/ToDoListReactRedux",
   "keywords": [],
@@ -13,18 +14,26 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^8.0.1",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "autoprefixer": "^10.4.14",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.1",
+    "eslint": "^9.17.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "gh-pages": "^6.2.0",
+    "globals": "^15.14.0",
     "html-webpack-plugin": "^5.5.1",
     "merge": "^2.1.1",
     "mini-css-extract-plugin": "^2.7.6",
@@ -35,6 +44,7 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.18.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
@@ -43,10 +53,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-redux": "^7.1.34",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
     "typescript-plugin-css-modules": "^5.0.1",
     "uuid": "^10.0.0"
