--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js --env env=prod",
     "dev": "webpack serve --config webpack/webpack.config.js --env env=dev",
-    "deploy": "gh-pages -d dist",
-    "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
+    "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://apluso1.github.io/ToDoListReactRedux",
+  "homepage": "https://apluso1.github.io/ReactReduxTS-3-Pages",
   "keywords": [],
   "author": "",
   "license": "ISC",
